cabal-version:       3.0
name:                hasec-core
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            Haskell advisory fundation library
description:         Haskell advisory fundation library.
Homepage:            http://github.com/blackheaven/hasec/blob/master/hasec-core
tested-with:         GHC==9.2.5

library
  hs-source-dirs: src
  exposed-modules:
    Data.HaSec
  other-modules:
      Paths_hasec_core
  autogen-modules:
      Paths_hasec_core
  build-depends:
      base == 4.*
    , parsec == 3.*
    , text == 1.2.* || == 2.*
    , time == 1.*
    , tomland == 1.*
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  default-language: Haskell2010

test-suite hasec-core-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Paths_hasec_core
  autogen-modules:
      Paths_hasec_core
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fhpc
  build-depends:
      base
    , hasec-core
    , hspec
    , hspec-core
    , text
    , QuickCheck
  default-language: Haskell2010
